[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/organizer/OrganizerFolder.gd" type="Script" id=1]
[ext_resource path="res://ui/organizer/OrganizerEditNameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://img/carat_icon.png" type="Texture" id=3]

[node name="New Folder" type="PanelContainer"]
margin_right = 274.0
margin_bottom = 38.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
labelText = ""

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 267.0
margin_bottom = 31.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 260.0
margin_bottom = 20.0

[node name="OpenIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
mouse_filter = 0
size_flags_vertical = 3
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 236.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Folder Name"
flat = true
align = 0

[node name="EditNameButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]

[node name="EntryContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 260.0
margin_bottom = 24.0
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/OpenIcon" to="." method="_on_TextureRect_gui_input"]
[connection signal="visibility_changed" from="VBoxContainer/HBoxContainer/OpenIcon" to="." method="_on_OpenIcon_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Label" to="." method="_on_Label_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/EditNameButton" to="." method="edit_name"]
